{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 44,
  "lineage": "6b439701-4e57-1049-3479-4a4028f353ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-007bf00330e214612",
            "domain": "vpc",
            "id": "eipalloc-09e0a73523ab06e9c",
            "network_interface": "eni-0f5b3e6bc032c9c9d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-34-231-155-55.compute-1.amazonaws.com",
            "public_ip": "34.231.155.55",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terrafrom_Internet_gateway",
            "aws_network_interface.terraform_network_interface",
            "aws_security_group.allow_web",
            "aws_subnet.terraform_subnet",
            "aws_vpc.terraform_vcp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:590052168551:instance/i-04afa999ebdd273cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04afa999ebdd273cd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f5b3e6bc032c9c9d"
              }
            ],
            "primary_network_interface_id": "eni-0f5b3e6bc032c9c9d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "34.231.155.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fdfdb45c288155ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070840661b432bbd6",
            "tags": {
              "Name": "Terraform ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000278e635f065384"
            ]
          },
          "dependencies": [
            "aws_network_interface.terraform_network_interface",
            "aws_security_group.allow_web",
            "aws_subnet.terraform_subnet",
            "aws_vpc.terraform_vcp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terrafrom_Internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590052168551:internet-gateway/igw-0af52ccd14cc301f8",
            "id": "igw-0af52ccd14cc301f8",
            "owner_id": "590052168551",
            "tags": {
              "Name": "terrafrom Internet gateway"
            },
            "vpc_id": "vpc-0080807e2a6c724a2"
          },
          "dependencies": [
            "aws_vpc.terraform_vcp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terraform_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0f5b3e6bc032c9c9d",
            "mac_address": "0e:f2:01:28:15:cf",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-000278e635f065384"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070840661b432bbd6"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.terraform_subnet",
            "aws_vpc.terraform_vcp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0761516ecf96f4660",
            "owner_id": "590052168551",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af52ccd14cc301f8",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af52ccd14cc301f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform route table"
            },
            "vpc_id": "vpc-0080807e2a6c724a2"
          },
          "dependencies": [
            "aws_internet_gateway.terrafrom_Internet_gateway",
            "aws_vpc.terraform_vcp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4a951721b58a06d",
            "route_table_id": "rtb-0761516ecf96f4660",
            "subnet_id": "subnet-070840661b432bbd6"
          },
          "dependencies": [
            "aws_internet_gateway.terrafrom_Internet_gateway",
            "aws_route_table.terraform_route_table",
            "aws_subnet.terraform_subnet",
            "aws_vpc.terraform_vcp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590052168551:security-group/sg-000278e635f065384",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000278e635f065384",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "590052168551",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0080807e2a6c724a2"
          },
          "dependencies": [
            "aws_vpc.terraform_vcp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590052168551:subnet/subnet-070840661b432bbd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-070840661b432bbd6",
            "map_public_ip_on_launch": false,
            "owner_id": "590052168551",
            "tags": {
              "Name": "terraform subnet"
            },
            "vpc_id": "vpc-0080807e2a6c724a2"
          },
          "dependencies": [
            "aws_vpc.terraform_vcp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590052168551:vpc/vpc-0080807e2a6c724a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071f88c16c2ecc954",
            "default_route_table_id": "rtb-0f894d9947bee056b",
            "default_security_group_id": "sg-0dc8fff08f854faa1",
            "dhcp_options_id": "dopt-2557735d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0080807e2a6c724a2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f894d9947bee056b",
            "owner_id": "590052168551",
            "tags": {
              "Name": "terraform VPC"
            }
          }
        }
      ]
    }
  ]
}